add views and forms

--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 {% load django_bootstrap5 %}
 
 {% block title %}
