--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -15,25 +15,50 @@
     </head>
     <body class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg navbar-light bg-light ms-3">
-            <a class="navbar-brand" href="/">Менеджер задач</a>
+            <a class="navbar-brand" href="/">{% translate "Task manager" %}</a>
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
             <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/">{% translate "Users" %}</a>
+                        <a class="nav-link" href="{% url 'users_index' %}">{% translate "Users" %}</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/login/">{% translate "Log in" %}</a>
+                        <a class="nav-link" href="{% url 'login' %}">{% translate "Log in" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/create/">{% translate "Sign up" %}</a>
+                        <a class="nav-link" href="{% url 'user_create' %}">{% translate "Sign up" %}</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <form method="post" action="{% url 'logout' %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link">
+                              {% translate "Logout" %}
+                            </button>
+                        </form>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
         </nav>
+
+        {% if messages %}
+            <div class="container mt-3">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+        {% endfor %}
+  </div>
+{% endif %}
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
