--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -36,10 +36,17 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'statuses_index' %}">{% translate "Statuses" %}</a>
+                            </li>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
                         <form method="post" action="{% url 'logout' %}" class="d-inline">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-link nav-link">
-                              {% translate "Logout" %}
+                                {% translate "Logout" %}
                             </button>
                         </form>
                         {% endif %}
@@ -54,9 +61,9 @@
                 <div class="alert alert-{{ message.tags }}">
                     {{ message }}
                 </div>
-        {% endfor %}
-  </div>
-{% endif %}
+            {% endfor %}
+            </div>
+        {% endif %}
         <div id="content">
             {% block content %}{% endblock %}
         </div>
