--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -26,12 +26,14 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
+                    {% if not user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">{% translate "Log in" %}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'user_create' %}">{% translate "Sign up" %}</a>
                     </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
