--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -41,6 +41,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'statuses_index' %}">{% translate "Statuses" %}</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'tasks_index' %}">{% translate "Tasks" %}</a>
+                            </li>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
