--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -42,6 +42,9 @@
                                 <a class="nav-link" href="{% url 'statuses_index' %}">{% translate "Statuses" %}</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="{% url 'labels_index' %}">{% translate "Labels" %}</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'tasks_index' %}">{% translate "Tasks" %}</a>
                             </li>
                     </li>
