--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -11,6 +11,25 @@
                 {% translate "Create Task" %}
             </button>
         </form>
+        <form method="get" class="p-4 bg-light rounded border shadow-sm mb-4">
+            <div class="mb-3">
+              <label for="id_status" class="form-label">{% translate "Status" %}</label>
+              {{ filter.form.status }}
+            </div>
+            <div class="mb-3">
+              <label for="id_executor" class="form-label">{% translate "Executor" %}</label>
+              {{ filter.form.executor }}
+            </div>
+            <div class="mb-3">
+              <label for="id_labels" class="form-label">{% translate "Label" %}</label>
+              {{ filter.form.labels }}
+            </div>
+            <div class="form-check mb-3">
+              {{ filter.form.user_tasks }}
+              <label for="id_user_tasks" class="form-check-label">{% translate "Only your tasks" %}</label>
+            </div>
+            <button type="submit" class="btn btn-primary">{% translate "Show" %}</button>
+          </form>
         <table class="table table-striped">
             <thead>
                 <tr>
