--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -7,3 +7,25 @@
 {% block title %}
     {% translate 'Task Manager' %}
 {% endblock %}
+
+{% block content %}
+    <div class="container mt-5">
+        <div class="p-5 mb-4 bg-light rounded-3 shadow">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">{% translate "Task Manager" %}</h1>
+                <p class="col-md-8 fs-4">
+                    {% translate "A simple and convenient web application for task management. 
+                    It allows users to create, edit, and track tasks, as well as assign them to other users." %}
+                </p>
+            <div>
+        </div>
+    </div>
+    <footer>
+        <div class="container my-5 pt-4 border-top">
+            <p>{% translate "Created by" %} <strong>{% translate "Maria Chikhireva" %}</strong></p>
+            <a href="https://github.com/MariaChikh" class="btn btn-primary btn-sm">
+            {% translate "My GitHub" %}
+            </a>
+        </div>
+    </footer>
+{% endblock %}
