final project fix

--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -13,9 +13,7 @@
         <div class="p-5 mb-4 bg-light rounded-3 shadow">
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">{% translate "Task Manager" %}</h1>
-                <p class="col-md-8 fs-4">
-                    {% translate "A simple and convenient web application for task management. 
-                    It allows users to create, edit, and track tasks, as well as assign them to other users." %}
+                <p class="col-md-8 fs-4">{% translate "A simple and convenient web application for task management." %}
                 </p>
             <div>
         </div>
