--- a/task_manager/templates/tasks/create.html
+++ b/task_manager/templates/tasks/create.html
@@ -9,15 +9,19 @@
             {% csrf_token %}
 
             {% for field in form %}
-                <div class="mb-3">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {% if field.errors %}
-                        <div class="alert alert-danger">
-                            {{ field.errors }}
+                {% if field.name == 'labels' %}
+                    <div class="mb-3">
+                        {{ field.label_tag }}
+                        <div class="border rounded p-2 overflow-auto" style="max-height: 150px;">
+                            {{ field }}
                         </div>
-                    {% endif %}
-                </div>
+                    </div>
+                {% else %}
+                    <div class="mb-3">
+                        {{ field.label_tag }}
+                        {{ field }}
+                    </div>
+                {% endif %}
             {% endfor %}
 
             <input class="btn btn-primary" type="submit"
