--- a/task_manager/templates/labels/create.html
+++ b/task_manager/templates/labels/create.html
@@ -10,7 +10,7 @@
 
             {% for field in form %}
                 <div class="mb-3">
-                    {{ field.label_tag }}
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                     {{ field }}
                 </div>
             {% endfor %}
