--- a/task_manager/templates/tasks/create.html
+++ b/task_manager/templates/tasks/create.html
@@ -11,14 +11,14 @@
             {% for field in form %}
                 {% if field.name == 'labels' %}
                     <div class="mb-3">
-                        {{ field.label_tag }}
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                         <div class="border rounded p-2 overflow-auto" style="max-height: 150px;">
                             {{ field }}
                         </div>
                     </div>
                 {% else %}
                     <div class="mb-3">
-                        {{ field.label_tag }}
+                        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                         {{ field }}
                     </div>
                 {% endif %}
