--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -10,7 +10,7 @@
 
             {% for field in form %}
                 <div class="mb-3">
-                    {{ field.label_tag }}
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                     {{ field }}
                     {% if field.help_text %}
                         <div class="form-text">{{ field.help_text|safe }}</div>
