--- a/task_manager/templates/tasks/index.html
+++ b/task_manager/templates/tasks/index.html
@@ -48,8 +48,8 @@
                         <td>{{ task.id }}</td>
                         <td><a href="{% url 'task_detail' pk=task.id %}">{{ task.name }}</a></td>
                         <td>{{ task.status }}</td>
-                        <td>{{ task.author }}</td>
-                        <td>{{ task.executor }}</td>
+                        <td>{{ task.author.first_name }} {{ task.author.last_name }}</td>
+                        <td>{{ task.executor.first_name }} {{ task.executor.last_name }}</td>
                         <td>{{ task.created_at|date:"d.m.Y H:i" }}</td>
                         <td>
                             <a href="{% url 'task_update' pk=task.id %}">{% translate "Update" %}</a>
