--- a/task_manager/templates/tasks/task_detail.html
+++ b/task_manager/templates/tasks/task_detail.html
@@ -15,11 +15,11 @@
         <div class="container">
             <div class="row p-1">
                 <div class="col">{% translate "Author" %}</div>
-                <div class="col">{{ task.author }}</div>
+                <div class="col">{{ task.author.first_name }} {{ task.author.last_name }}</div>
             </div>
             <div class="row p-1">
                 <div class="col">{% translate "Executor" %}</div>
-                <div class="col">{{ task.executor }}</div>
+                <div class="col">{{ task.executor.first_name }} {{ task.executor.last_name }}</div>
             </div>
             <div class="row p-1">
                 <div class="col">{% translate "Status" %}</div>
